--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  shared_preferences: ^0.5.12
+  http: ^0.12.1
+  path_provider: ^1.6.24
+  flutter_webrtc: ^0.5.7
   flutter:
     sdk: flutter
 
